src/objects/accc_Apex_Code_Configuration__mdt.object
<CustomObject>
    <description>Apex Configuration is used by the underlying cross-cutting framework to determine how to behave. The behavior can change based on concreteness of the classes. The interfaces are the contract to inter-operate</description>
    <fields>
        <fullName>CacheResource__c</fullName>
        <defaultValue>&apos;ApexCache&apos;</defaultValue>
        <description>class that implements class ICache</description>
        <inlineHelpText>class that implements class ICache</inlineHelpText>
        <label>Cache Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CacheStrategyInvocation__c</fullName>
        <description>Class use to determine the cache strategy</description>
        <inlineHelpText>Class use to determine the cache strategy</inlineHelpText>
        <label>Cache Strategy Invocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CacheStrategy__c</fullName>
        <description>Cache Strategy class</description>
        <inlineHelpText>Cache Strategy class</inlineHelpText>
        <label>Cache Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigurationResource__c</fullName>
        <defaultValue>&apos;accc_VirtualCustomSettings&apos;</defaultValue>
        <description>Configuration Resource , such custom settings, static resources etc.</description>
        <inlineHelpText>Configuration Resource , such custom settings, static resources etc.</inlineHelpText>
        <label>Configuration Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionFormatter__c</fullName>
        <defaultValue>&apos;ExceptionFormatter&apos;</defaultValue>
        <description>Formats exceptions</description>
        <inlineHelpText>Formats exceptions</inlineHelpText>
        <label>Exception Formatter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionHandler__c</fullName>
        <description>class that implements IApexExceptionHandler</description>
        <inlineHelpText>class that implements IApexExceptionHandler</inlineHelpText>
        <label>Exception Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionPolicyHandler__c</fullName>
        <defaultValue>&apos;ApexExceptionPolicyStrategy&apos;</defaultValue>
        <description>How to handle exceptions</description>
        <inlineHelpText>How to handle exceptions</inlineHelpText>
        <label>Exception Policy Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FactoryResource__c</fullName>
        <defaultValue>&apos;ApexObjectFactory&apos;</defaultValue>
        <description>The factory used to create all the classes ( those that have an interface)</description>
        <inlineHelpText>The factory used to create all the classes ( those that have an interface)</inlineHelpText>
        <label>Factory Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FallbackResource__c</fullName>
        <description>class that implements IFallbackResources</description>
        <label>Fallback Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogFormatter__c</fullName>
        <defaultValue>&apos;accc_ApexLogFormatter&apos;</defaultValue>
        <description>The default formatter for log data</description>
        <inlineHelpText>The default formatter for log data ( see accc_ApexLogFormatter)</inlineHelpText>
        <label>Log Formatter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logger__c</fullName>
        <defaultValue>&apos;ApexLogger&apos;</defaultValue>
        <description>The logging class that implements ILogger</description>
        <inlineHelpText>The logging class that implements ILogger</inlineHelpText>
        <label>Logger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousTransactionResultResource__c</fullName>
        <defaultValue>&apos;ApexPreviousTransactionResult&apos;</defaultValue>
        <description>How to handle a previous transaction result class</description>
        <inlineHelpText>How to handle a previous transaction result class</inlineHelpText>
        <label>Previous Transaction Result Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuntimeEnvironment__c</fullName>
        <defaultValue>&apos;ApexBaseRuntimeEnvironment&apos;</defaultValue>
        <description>the class runtime environment</description>
        <inlineHelpText>the class runtime environment</inlineHelpText>
        <label>Runtime Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendEmailChannel__c</fullName>
        <defaultValue>&apos;ApexMailMessageSender&apos;</defaultValue>
        <description>How to send email class</description>
        <inlineHelpText>How to send email class</inlineHelpText>
        <label>Send Email Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accc Apex Code Configuration</label>
    <pluralLabel>Accc Apex Code Configurations</pluralLabel>
</CustomObject>